...
        android:layout_height="40dp"
        android:ems="10"
        android:maxLength="8"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registration_emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etxtPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registration_phoneHint"
        android:inputType="phone"
        android:maxLength="19" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_OK"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration_btnOKText" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration_btnCancelText" />
    </LinearLayout>

...
