<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bid Amount:"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etxt_BidAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_place_bid_Hint"
        android:inputType="textPersonName|numberDecimal"
        android:padding="5dp" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GENERIC_SUBMIT" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GENERIC_CANCEL" />
</LinearLayout>