<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="db_Paul"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="Phone Number: +1 (780) 432-2222\nEmail Address: example@example.com"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/txt_reviewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="textMultiLine"
            android:text="SUMMARY: ****...."
            android:textAlignment="center"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lst_reviews"
            android:layout_width="match_parent"
            android:layout_height="374dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GENERIC_CLOSE" />

    </LinearLayout>

</LinearLayout>